Start of daylio setup, cleanup blog template

--- a/package.json
+++ b/package.json
@@ -14,20 +14,26 @@
   },
   "scripts": {
     "dev": "next",
-    "dev:watch": "next-remote-watch ./posts",
+    "dev:watch": "next-remote-watch subpages",
     "build": "next build",
     "start": "next start",
     "export": "next build && next export",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@mapbox/rehype-prism": "^0.9.0",
+    "@mui/x-charts": "^7.22.2",
     "@tailwindcss/typography": "^0.5.12",
+    "chance": "^1.1.12",
     "classnames": "^2.3.1",
+    "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "next": "^15.0.0",
     "next-mdx-remote": "^5.0.0",
     "next-remote-watch": "2.0.0",
+    "papaparse": "^5.4.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
