--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@tailwindcss/typography": "^0.5.12",
     "apexcharts": "^4.0.0",
     "chance": "^1.1.12",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-annotation": "^3.1.0",
     "classnames": "^2.3.1",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
@@ -39,6 +41,7 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^4.0.0"
   },
