--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chance": "^1.1.12",
     "chart.js": "^4.4.7",
     "chartjs-plugin-annotation": "^3.1.0",
+    "chartjs-react": "^4.2.1",
     "classnames": "^2.3.1",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
