--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-apexcharts": "^1.6.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
